 - Spectators won't affect gameplay when blocking arrows
 - Higher EXP drop on Jungle creeps (after: 7-9 / before: 6-8)
 - Fixed Spawn camping poison/regeneration didn't applying, and increased radius.
 - Fixed arrows killing players counting as neutral kill
 - Removed fire bow from Meele, not needed anymore
 * PLUGIN:
 - Added fixed debug mode
 - Plugin will ignore most events that have been cancelled
 - Changed A LOT OF THINGS, also, a lot TODO, to start using Duurax's map and custom maps
 - Changed how Jungle and Lanes creeps work on code
 - Ranking now show Kill/Death ratio and Win/Lost ratio
 - Added a column on dotamine's table on MySQL: "lhs" - this will save last hits
 - Don't allow random players drop items
 - Fixed game don't starting without forcing it to start
 - Fixed NullPointerException when someone that aren't ingame dies.

0.3.1:
 * GAMEPLAY:
 - Fixed Shadow Blade duration
 - Chats are now shown on Console
 - /Dota tp will consume only ONE paper now
 - Tp is now correctly cancelled
 * PLUGIN:
 - Fixed NullPointerException when attacking skeletons and when skeleton attacking Players
 - Added Signs to join spectator, ranged or meele, and when ingame, to Shop (Sign's first line must be [Dota], second "Join"/"Shop", third "Ranged"/"Meele"/"Spectator"
 - If queue is full, the game will start
 - Respawn effect will be executed on Respawn Location with -1 Y instead of Players' location

0.3:
 * GAMEPLAY:
 - Added /dota tp (bot/top/mid/base) - this will require a PAPER on player's HAND / Cooldown: 90 sec / Canceled on damage
 - Added Force Staff: left clicking Diamond Hoe - Thank you, https://github.com/Eniripsa96/EnchantmentPack/blob/master/EnchantActivePack/src/com/sucy/active/enchants/Dash.java#L52
 - Added Heart of Tarrasque: left click on inventory to use - it will regen your health until you receive damage